fix testimonial overflow

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -120,8 +120,6 @@ body {
     justify-content: center;
     text-align: center;
     margin-bottom: 20px;
-    margin-right: 0px;
-    margin-left: 0px;
     display: grid;
     place-items: center;
   }
@@ -155,7 +153,7 @@ body {
 }
 .testimonial-cards{
   z-index: 0;
-  width: 760px;
+  width: auto;
  }
 }
 
@@ -173,7 +171,7 @@ body {
   }
   .testimonial-cards{
     z-index: 0;
-    width: 560px;
+    width: auto;
     font-size: small;
    }
   }
@@ -194,7 +192,7 @@ body {
   }
   .testimonial-cards{
     z-index: 0;
-    width: 450px;
+    width: auto;
     font-size: small;
    }
 }
